tests/neg/i1568.scala
object Test {
  rewrite def foo(n: Int) = foo(n) // error: cyclic reference
}
